# empty-room

./: .gitignore  README.md
GAPS/: Makefile
GAPS/R2Shapes/: R2Grid.cpp  R2Image.cpp  R2Point.h  R2Relate.cpp  R2Vector.cpp
GAPS/R3Graphics/: R2Viewport.cpp  R3Brdf.cpp  R3Brdf.h  R3DirectionalLight.h  R3Graphics.h  R3Material.h  R3Scene.h  R3Viewer.cpp
GAPS/R3Shapes/: R3Box.h  R3Cont.h  R3Dist.h  R3Draw.cpp  R3Grid.cpp  R3Isect.cpp  R3Isect.h  R3Kdtree.cpp  R3Kdtree.h  R3Mesh.cpp  R3Mesh.h  R3MeshProperty.cpp  R3MeshPropertySet.cpp  R3MeshSearchTree.cpp  R3PlanarGrid.cpp  R3Point.h  R3Quaternion.cpp  R3Quaternion.h  R3Shape.cpp  R3Shape.h  R3Shapes.h  R3Vector.h  R4Matrix.cpp  R4Matrix.h
GAPS/RNBasics/: Makefile  R2Pixel.cpp  R2Pixel.h  RNBasics.h  RNError.h  RNHeap.cpp  RNScalar.h
data_grabber/: CMakeLists.txt  data_grabber.cpp
geometry_tests/: CMakeLists.txt  planar_segmentation.cpp  test_plane.cpp
globalreg/: .gitignore  CMakeLists.txt  align.cpp  findplanes.cpp  findplanes.h  globalreg.cpp  pairwise.cpp  pairwise.h  plane2plane.cpp  plane2plane.h  planecorrespondences.cpp  planefinder.cpp  postprocess.cpp  roommodel.cpp  roommodel.h  util.cpp  util.h
inverse_render/: .gitignore  CMakeLists.txt  Makefile  R2ImageOld.cpp  R2ImageOld.h  README.md  RoomModel.cpp  RoomModel_Internal.h  Simplify.h  TangoWorkflow.md  camparams.h  clusterlights.cpp  clusterlights.h  colorhelper.cpp  colorhelper.h  dataserver.cpp  display.cpp  display.h  eigen_nnls.h  exposuresolver.cpp  exposuresolver.h  featurefinder.cpp  featurefinder.h  findbaseboard.cpp  findbaseboard.h  geometrygenerator.cpp  hemicuberenderer.cpp  hemicuberenderer.h  imageio.cpp  imageio.h  imagemanager.cpp  imagemanager.h  imageserver.cpp  imageserver.h  inverselighting.cpp  invrender.cpp  invrenderapp.cpp  invrenderapp.h  labelimageapp.cpp  linefinder.cpp  (+37 more)
inverse_render/R2Shapes/: Makefile  R2Box.cpp  R2Box.h  R2Circle.cpp  R2Grid.h  R2Image.cpp~  R2Point.cpp  R2Relate.h  R2Vector.h
inverse_render/R3Graphics/: Makefile  R3Light.h  R3Material.cpp  R3Scene.cpp  R3SceneNode.cpp  R3SceneNode.h
inverse_render/R3Shapes/: Makefile  R3Box.cpp  R3Cont.cpp  R3Dist.cpp  R3Grid.h  R3Line.cpp  R3Line.h  R3MeshSearchTree.cpp  R3MeshSearchTree.h  R3PlanarGrid.h  R3Point.cpp  R3Relate.cpp  R3Vector.cpp
inverse_render/RNBasics/: Makefile
inverse_render/apps/: baseboardapp.cpp  cameraapp.cpp  edgeimageapp.cpp  exposuresolverapp.cpp  intrinsicapp.cpp  invrenderapp.cpp  invrenderapp.h  labelimageapp.cpp  linefindapp.cpp  meshcolorapp.cpp  reprojectapp.cpp  solverapp.cpp  subdivapp.cpp  vertexfilterapp.cpp  wallfindapp.cpp  windowapp.cpp
inverse_render/datamanager/: CMakeLists.txt  camparams.h  dataserver.cpp  fileimageserver.cpp  fileimageserver.h  imageio.cpp  imageio.h  imagemanager.cpp  imagemanager.h  imageserver.cpp  imageserver.h  material.h  meshmanager.cpp  meshmanager.h  meshserver.cpp  meshserver.h  rgbe.cpp
inverse_render/emptyroomui/: averagesample.v.glsl  default.f.glsl  default.v.glsl  emptyroomui.pro  eruiglwidget.cpp  eruiglwidget.h  fatcowtheme.qrc  geometrygenerator.cpp  geometrygenerator.h  hdr.f.glsl  hdr.v.glsl  hdr_gamma.f.glsl  hdr_log.f.glsl  hdrglwidget.cpp  hdrglwidget.h  hdrimageviewer.cpp  hdrimageviewer.h  hdrviewer.cpp  hdrviewer.h  loadshader.cpp  loadshader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qxtspanslider.cpp  rectanglerenderer.cpp  rectanglerenderer.h  subprocessworker.cpp  subprocessworker.h
inverse_render/emptyroomui/QGLViewer/: QGLViewer.pro  camera.cpp  camera.h  config.h  frame.h  mouseGrabber.h  qglviewer.cpp  qglviewer.h  saveSnapshot.cpp
inverse_render/emptyroomui/emptyroomui-app/: emptyroomui-app.pro  eruiglwidget.cpp  eruiglwidget.h  hdrglwidget.cpp  hdrglwidget.h  hdrimageviewer.cpp  hdrimageviewer.h  hdrviewer.cpp  hdrviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qxtspanslider.h  subprocessworker.cpp  subprocessworker.h  vertexselector.cpp  vertexselector.h
inverse_render/emptyroomui/icons/FatCow/: index.theme
inverse_render/lighting/: ceres_reg.h  cubemap.cpp  generateimage.cpp  generateimage.h  light.cpp  light.h  lighting_ceres.cpp  lighting_ceres.h  sh.cpp  sh.h
inverse_render/monolithic/: display.cpp  display.h  invrender.cpp  parse_args.cpp
inverse_render/rendering/: envmap.cpp  envmap.h  hemicuberenderer.cpp  hemicuberenderer.h  loadshader.cpp  loadshader.h  opengl_compat.cpp  opengl_compat.h  rendermanager.cpp  rendermanager.h
inverse_render/roommodel/: CMakeLists.txt  RoomModel.cpp  RoomModel_Internal.h  floorplanhelper.cpp  floorplanhelper.h  geometrygenerator.cpp  geometrygenerator.h  rectanglerenderer.cpp  rectanglerenderer.h
inverse_render/shaders/: avg.v.glsl  default.f.glsl  default.v.glsl  flat.f.glsl  labels.g.glsl  labels.v.glsl  normals.v.glsl  overlay.g.glsl  overlay.v.glsl  precalculated.v.glsl  selectdiff.v.glsl  selectoverlay.g.glsl  selectoverlay.v.glsl  selectunion.v.glsl  singleimage.v.glsl  threshold.g.glsl  threshold.v.glsl  variance.v.glsl
inverse_render/utils/: batchconvert.py  confidence.cpp  convert.cpp  create_camfile.cpp  envmap.cpp  generatemask.cpp  makemovie.py  processdepthstream.cpp  splitimagestream.cpp  yuv.h
inverse_render/wallfinder/: orientation_finder.cpp  orientation_finder.h  shortestpath.h  wall_finder.cpp  wall_finder.h
scanalyze_scripts/: Makefile  alignring.tcl  gen_manifest.py  load.tcl
scripts/: README  cam_from_rif.py  hdrdiff.py  radiance_from_maya.py  ransac.m  resample.mlx  solve.m
synthetic_preprocess/: .gitignore  CMakeLists.txt  synthetic_preprocess.cpp
wallfinder/: .gitignore  CMakeLists.txt  floorplan.cpp  orientation_finder.cpp  orientation_finder.h  shortestpath.cpp  wall_finder.cpp  wall_finder.h  wallfinder.cpp  wf.cpp
