cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(EMPTY_ROOM)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(test_plane test_plane.cpp)
add_executable(planar_segmentation planar_segmentation.cpp)
target_link_libraries(test_plane ${PCL_LIBRARIES})
target_link_libraries(planar_segmentation ${PCL_LIBRARIES})
